example/fortune-pod-env.yaml
apiVersion: v1
kind: Pod
metadata:
    name: fortune3senv
spec:
    containers:
    - image: yumingtao/fortune:env
      name: html-generator
      volumeMounts:
      - name: html
        mountPath: /var/htdocs
    - image: nginx:alpine
      name: web-server
      volumeMounts:
      - name: html
        mountPath: /usr/share/nginx/html
        readOnly: true
      ports:
      - containerPort: 80
        protocol: TCP
    volumes:
    - name: html
      emptyDir: {}
