example/kubia-multi-ports.yaml
apiVersion: v1
kind: Pod
metadata:
    name: kubia
spec:
    containers:
    - image: yumingtao/kubia
      name: kubia
      ports:
      - name: http
        port: 80
        containerPort: 8080
      - name: https
        port: 443
        containerPort: 8443
