example/mongodb-pod-gcepd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
spec:
  containers:
  - image: mongo
    name: mongodb
    volumeMounts:
    - name: mongodb-data
      mountPath: /data/db #MongoDB数据存放的目录
    ports:
    - containerPort: 27017
      protocol: TCP
  volumes:
    - name: mongodb-data
      gcePersistentDisk:
        pdName: mongodb #持久磁盘的名称必须与先前创建的实际PD一致
        fsType: ext4
