example/mongodb-pod-hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
spec:
  containers:
  - image: mongo
    name: mongodb
    volumeMounts:
    - name: mongodb-data
      mountPath: /data/db #MongoDB数据存放的目录
    ports:
    - containerPort: 27017
      protocol: TCP
  volumes:
    - name: mongodb-data
      hostPath:
        path: /tmp/mongodb
