example/mongodb-pod-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
spec:
  containers:
  - image: mongo
    name: mongodb
    volumeMounts:
    - name: mongodb-data
      mountPath: /data/db #MongoDB数据存放的目录
    ports:
    - containerPort: 27017
      protocol: TCP
  volumes:
    - name: mongodb-data
    persistentVolumeClaim:
        claimName: mongodb-pvc #在pod卷中通过名称引用pvc
