example/external-svc-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
 name: external-svc #endpoint名称必须和服务的名称相同
subsets:
    - addresses: # 服务将连接重定向到endpoint的IP地址
      - ip: 11.11.11.11
      - ip: 22.22.22.22
      ports:
      - port: 8080 #endpoint的目标端口
