example/external-svc-externalname.yaml
apiVersion: v1
kind: Service
metadata:
    name: external-svc-externalname
spec:
    type: ExternalName
    externalName: someapi.somecompany.com #实际服务的完全限定域名
    ports:
    - port: 80
