example/external-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: external-svc
spec:
    ports:
    - port: 80
