example/kubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
    name: kubia-nodeport
spec:
    type: NodePort
    ports:
    - port: 80 #服务集群ip的端口号
      targetPort: 8080
      nodePort: 30123 #通过集群节点的30123端口可以访问该服务
    selector:
        app: kubia
